--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "name": "",
     "email": ""
   },
+  "homepage": "https://niezicheng.github.io/github-actions-demo",
   "repository": "/blog-vuepress",
   "scripts": {
     "dev": "vuepress dev src",
