--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "name": "",
     "email": ""
   },
-  "homepage": "https://niezicheng.github.io/github-actions-demo",
+  "homepage": "https://niezicheng.github.io/blog-vuepress",
   "repository": "/blog-vuepress",
   "scripts": {
     "dev": "vuepress dev src",
