--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
-name: GitHub Actions Build and Deploy Demo
+name: GitHub Actions Build Docs
 on:
   push:
     branches:
       - main
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -15,5 +16,5 @@ jobs:
       env:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: gh-pages
-        FOLDER: 'src/.vitepress/dist/'
+        FOLDER: src/.vuepress/dist
         BUILD_SCRIPT: npm install && npm run build
