refactor: update dir src to docs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
 
       # 运行构建脚本
       - name: Run Build Script
-        run: npm run build
+        run: npm run build:docs
 
       # 部署到 GitHub Pages
       - name: Deploy to GitHub Pages
@@ -59,7 +59,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # 要部署的文件夹，必填
-          FOLDER: src/.vuepress/dist
+          FOLDER: docs/.vuepress/dist
           # 希望部署的分支，默认gh-pages
           BRANCH: gh-pages
           # 默认情况是不需要填的，如果您需要更多权限，例如部署到另一个存储库才需要填写
