--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "repository": "/blog-vuepress",
   "scripts": {
-    "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "dev:docs": "vuepress dev docs",
+    "build:docs": "vuepress build docs"
   },
   "license": "MIT",
   "devDependencies": {
