--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blog-vuepress",
   "version": "0.0.1",
-  "description": "",
+  "description": "Vue2.6.14 source code analysis",
   "main": "index.js",
   "authors": {
     "name": "",
@@ -9,6 +9,7 @@
   },
   "repository": "/blog-vuepress",
   "scripts": {
+    "start": "npm run dev:docs",
     "dev:docs": "vuepress dev docs",
     "build:docs": "vuepress build docs"
   },
